--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,13 @@ singularity {
 }
 */
 
+/*
+conda {
+  enabled = true
+  autoActivate = true  // Optional: activates the env before script runs
+}
+*/
+
 // using Apptainer
 
 apptainer {
